--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -3,6 +3,10 @@
 
 *Write a short description about the course and add a link to your GitHub repository here. This is an R Markdown (.Rmd) file so you should use R Markdown syntax.*
 
+Exercise set 1 toke a lot more time than I was expecting. The course seems really laborious but useful this far. The book seems really clear and user friendly.
+
+https://github.com/AnniKauppinen/IODS-project
+
 ```{r}
 # This is a so-called "R chunk" where you can write R code.
 
